--- a/src/app/edit-technician/edit-technician.component.html
+++ b/src/app/edit-technician/edit-technician.component.html
@@ -46,8 +46,6 @@
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
-            <h1 class="titletxt">Add Technician</h1>
-
         </mat-toolbar>
 
         <button class="backBtn" routerLink="/technicians" mat-icon-button>
@@ -112,15 +110,11 @@
                         </mat-form-field>
 
                         <div>
-                            <button mat-raised-button type="submit" class="addBtn">Add</button>
+                            <button mat-raised-button type="submit" class="addBtn">Update</button>
                         </div>
                     </div>
-
-
-
                 </form>
             </div>
         </div>
-
     </mat-sidenav-content>
 </mat-sidenav-container>
