--- a/src/app/appliance-cleaning/appliance-cleaning.component.html
+++ b/src/app/appliance-cleaning/appliance-cleaning.component.html
@@ -15,7 +15,7 @@
             <div class="bookingside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-                    <a class="booking-btn" routerLink="/booking">Book a Service</a>
+                    <a class="booking-btn" routerLink="/bookingform">Book a Service</a>
                 </mat-list-item>
             </div>
             <div class="profileside">
@@ -40,7 +40,7 @@
             <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
           </button>
         </mat-toolbar>
-        <h1 class="backBtn" routerLink="/booking">
+        <h1 class="backBtn" routerLink="/bookingform">
             <mat-icon class="backicon">chevron_left</mat-icon>
             <label class="backtxt">Back</label>
         </h1>
