--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -269,6 +269,20 @@
         width: 450px;
         font-family: 'Trebuchet MS';
     }
+    .rateBtn {
+        width: 80px;
+        height: 40px;
+        border-color: #8a1c3b;
+        color: #590D22;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-top: 1px;
+    }
+    .rateBtn:hover {
+        background-color: #590D22;
+        color: #FFFFFF;
+        transition: 0.3s;
+    }
 }
 
 @media (max-width: 576px) {
