--- a/src/app/edit-technician/edit-technician.component.css
+++ b/src/app/edit-technician/edit-technician.component.css
@@ -14,7 +14,7 @@
     .mat-toolbar {
         background-color: #DD0346;
         width: 100%;
-        height: 200px;
+        height: 100px;
         box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
     }
     .logo {
@@ -57,6 +57,10 @@
         margin-left: 0px;
         margin-top: 30px;
         text-align: justify;
+        border-radius: 20px;
+        background-color: #D6B2BD;
+        width: 100%;
+        height: 70px;
     }
     .bookingside:hover {
         background-color: #D6B2BD;
@@ -73,14 +77,30 @@
         margin-left: 20px;
         margin-top: 25px;
     }
+    .feedbackside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .feedbackside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .feedback-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
     .profileside {
         margin-left: 0px;
         margin-top: 30px;
         text-align: justify;
-        border-radius: 20px;
-        width: 100%;
-        height: 70px;
-        background-color: #D6B2BD;
     }
     .profileside:hover {
         background-color: #D6B2BD;
@@ -120,124 +140,97 @@
     .spacer {
         flex: 1 1 auto;
     }
-    .dashtitle {
+    .titletxt {
         color: #FFFFFF;
         font-size: 25px;
-        float: left;
-        margin-left: 60px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 5px;
-    }
-    .dashtitle2 {
-        color: #FFFFFF;
-        font-size: 15px;
-        float: left;
-        margin-left: -270px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 35px;
-    }
-    .spacer {
-        flex: 1 1 auto;
-    }
-    .dashtitle {
-        color: #FFFFFF;
-        font-size: 25px;
-        float: left;
-        margin-left: 60px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 5px;
-    }
-    .dashtitle2 {
-        color: #FFFFFF;
-        font-size: 15px;
-        float: left;
-        margin-left: -270px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 35px;
-    }
-    .startBtn {
-        width: 120px;
-        height: 40px;
-        float: left;
-        margin-left: -270px;
-        margin-top: 80px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #FFFFFF;
-        color: #dd0346;
-        font-size: 13px;
-    }
-    .startBtn:hover,
-    .startBtn:active {
-        color: #003049;
-    }
-    .ayosgamit {
-        font-family: 'Candara';
-        font-size: 30px;
-        margin-left: 10px;
-        color: #FFFFFF;
-        margin-top: 5px;
-    }
-    h1 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 25px;
-        color: #003049;
-        float: left;
-        margin-left: 80px;
-        margin-top: 50px;
-    }
-    .infocard {
-        width: 800px;
-        height: 250px;
-        float: left;
-        margin-top: 120px;
-        margin-left: -165px;
-    }
-    .addresscard {
-        width: 800px;
-        height: 320px;
-        float: left;
-        margin-top: 30px;
-        margin-left: 85px;
-    }
-    .name {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 24px;
-        color: #14213D;
-    }
-    .mail_icon {
-        font-size: 22px;
-        color: #14213D;
-        position: relative;
-        /* Adjust these values accordingly */
-        top: 5px;
-    }
-    .mail {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 17px;
-        color: #14213D;
-        margin-left: 15px;
-    }
-    .paper-label {
-        color: grey;
-    }
-    .editbtn {
-        float: right;
-        background-color: #590D22;
-        color: #FFFFFF;
-    }
-    .editicon {
-        color: #FFFFFF;
-    }
-    h3 {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 20px;
-        color: #003049;
         float: left;
         margin-left: 20px;
-        margin-top: 10px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 30px;
     }
-    .row {
+    .backBtn {
+        font-size: 20px;
+        float: left;
         margin-top: 50px;
+        margin-left: 100px;
+        background-color: grey;
+    }
+    .backicon {
+        color: #FFFFFF;
+        float: left;
+        margin-left: 2px;
+        font-size: 35px;
+    }
+    .mat-dialog-content {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+    .vector {
+        width: 35%;
+        margin-top: 170px;
+        float: right;
+        margin-right: -50px;
+    }
+    .card {
+        width: 700px;
+        height: fit-content;
+        float: right;
+        margin-right: 50px;
+        margin-top: 100px;
+        display: flex;
+    }
+    .title {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
         margin-left: 10px;
+        margin-top: 50px;
+    }
+    .titletxt {
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 25px;
+        margin-left: 30px;
+        margin-top: 50px;
+    }
+    .genderfield {
+        margin-top: 10px;
+        margin-left: 20px;
+        width: 120px;
+    }
+    .birthdate {
+        margin-top: 10px;
+        margin-left: 20px;
+        width: 200px;
+    }
+    .textfield {
+        margin-top: 10px;
+        width: 350px;
+        margin-left: 20px;
+    }
+    .addBtn {
+        width: 90px;
+        height: 42px;
+        background-color: #fcb42a;
+        color: #FFFFFF;
+        font-size: 15px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: right;
+        margin-right: 30px;
+        margin-top: 50px;
+        margin-bottom: 20px;
+    }
+    .addBtn:hover,
+    .addBtn:active {
+        color: #f9dcc4;
+    }
+    .container {
+        width: fit-content;
+        height: auto;
+        margin: auto;
+    }
+    .form-group {
+        text-align: left;
     }
 }
