--- a/src/app/profileform/profileform.component.html
+++ b/src/app/profileform/profileform.component.html
@@ -53,15 +53,13 @@
 
         <mat-card class="infocard">
             <div>
-
-                <button mat-icon-button class="editBtn" aria-label="Example icon button with a vertical three dot icon">
-                    <mat-icon class="editicon">edit</mat-icon>
-                  </button>
+                <button class="editbtn" mat-raised-button routerLink="/edit_profile">Edit
+                <!-- <mat-icon class="editicon">edit</mat-icon> -->
+                </button>
             </div>
             <div>
                 <h3 class="name">{{fname}} {{lname}}</h3>
             </div>
-
             <div>
                 <div class="row">
                     <div class="col-12">
@@ -79,15 +77,8 @@
                     <div class="col-12">
                         <p class="mt-2">
                             <mat-icon class="mail_icon">lock</mat-icon>
-                            <label class="mail"><a href="/change_password">
-                Change password?
-              </a>
-            </label>
+                            <label class="mail"><a href="/change_password">Change password?</a></label>
                         </p>
-                    </div>
-
-                    <div class="col-12">
-                        <img class="map-image mt-4" lat="14.6141994" long="120.9991554">
                     </div>
                 </div>
             </div>
@@ -100,7 +91,6 @@
             <div>
                 <h3>Address Details</h3>
             </div>
-
             <div>
                 <div class="row">
                     <div class="col-12">
@@ -119,5 +109,11 @@
                     <div class="col-12">
                         <img class="map-image mt-4" lat="14.6141994" long="120.9991554">
                     </div>
+                    <div class="col-12">
+                        <img class="map-image mt-4" lat="14.6141994" long="120.9991554">
+                    </div>
                 </div>
             </div>
+        </mat-card>
+    </mat-sidenav-content>
+</mat-sidenav-container>
