--- a/src/app/requestdetails-admin/requestdetails-admin.component.css
+++ b/src/app/requestdetails-admin/requestdetails-admin.component.css
@@ -18,8 +18,10 @@
         margin-left: 55px;
     }
     .mat-toolbar {
-        background-color: #D62828;
+        background-color: #DD0346;
         width: 100%;
+        height: 100px;
+        box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
     }
     .ayosgamit {
         font-family: 'Candara';
@@ -317,27 +319,6 @@
         float: left;
         margin-left: 200px;
     }
-    .reschedBtn {
-        width: 160px;
-        height: 40px;
-        background-color: #F77F00;
-        color: #FFFFFF;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 14px;
-        float: right;
-        margin-right: 15px;
-    }
-    .cancelBtn {
-        width: 120px;
-        height: 40px;
-        background-color: #D62828;
-        color: #FFFFFF;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 13px;
-        float: right;
-        margin: 5px;
-        margin-top: 1px;
-    }
     .pending {
         width: 100%;
         height: 100%;
@@ -405,5 +386,36 @@
     }
     .radioBtn {
         margin: 5px;
+    }
+    .acceptBtn {
+        width: 120px;
+        height: 40px;
+        background-color: #8a1c3b;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        float: right;
+        margin: 5px;
+        margin-top: 1px;
+    }
+    .acceptBtn:hover {
+        background-color: #590D22;
+        transition: 0.3s;
+    }
+    .rejectBtn {
+        width: 120px;
+        height: 40px;
+        border-color: #D62828;
+        color: #D62828;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        float: right;
+        margin: 5px;
+        margin-top: 1px;
+    }
+    .rejectBtn:hover {
+        background-color: #D62828;
+        color: #FFFFFF;
+        transition: 0.3s;
     }
 }
