--- a/src/app/bookingsummary-edit/bookingsummary-edit.component.html
+++ b/src/app/bookingsummary-edit/bookingsummary-edit.component.html
@@ -15,7 +15,7 @@
     <label class="aboutusBtn" (click)="getConfirmation8()">About Us</label>
     <label class="aboutusBtn" (click)="getConfirmationn()">Home</label>
     <span class="spacer"></span>
-    <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
+
 
 </mat-toolbar>
 <div class="container1">
@@ -23,9 +23,11 @@
         <div class="ds">
             <mat-card class="summary">
                 <div>
-                    <mat-icon class="icon">description
-                        <h1 class="title">Request Summary</h1>
-                    </mat-icon>
+                    <img class="remindervector" mat-card-image src="../../assets/reminder.png">
+                    <h1 class="title">Booking Summary</h1>
+
+                    <label class="label">Edit your booking details.</label>
+
                 </div>
                 <table class="table">
                     <thead>
