--- a/src/app/edit-profile/edit-profile.component.css
+++ b/src/app/edit-profile/edit-profile.component.css
@@ -103,6 +103,10 @@ mat-list-item {
     margin-left: 0px;
     margin-top: 30px;
     text-align: justify;
+    background-color: #D6B2BD;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
 }
 
 .profileside:hover {
