--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -27,7 +27,7 @@
         <h1 class="title1"><b>We provide the service</b></h1>
         <h1 class="title2"><b>you need on your own home.</b></h1>
 
-        <button mat-raised-button class="bookBtn" routerLink="/login">Book a service</button>
+        <button mat-raised-button class="bookBtn" routerLink="/loginform">Book a service</button>
 
 
         <img class="image" mat-card-image src="../../assets/Untitled-2.png">
