--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -284,7 +284,7 @@
     .login-emailfield {
         min-height: 40px;
         width: 220px;
-        margin-top: 10px;
+        margin-top: 80px !important;
         margin-left: 30px;
     }
     .login-passfield {
