--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -20,7 +20,7 @@
         <ng-template #notLogin></ng-template>
         <span class="spacer"></span>
         <div *ngIf="token != null; else notLogin1"></div>
-        <ng-template #notLogin1><button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
+        <ng-template #notLogin1><button mat-raised-button class="loginBtn" routerLink="/loginform">Login / Sign Up</button>
         </ng-template>
     </mat-toolbar>
 
@@ -36,13 +36,13 @@
 
 
         <form [formGroup]="userForm" (ngSubmit)="onClickSubmit()">
-            <div class="g-signin2" data-onsuccess="onSignIn" data-width="300" data-height="40" data-longtitle="true" style="float: left; margin-left: 80px; margin-top: 30px;"></div>
+            <!--<div class="g-signin2" data-onsuccess="onSignIn" data-width="300" data-height="40" data-longtitle="true" style="float: left; margin-left: 80px; margin-top: 30px;"></div>
 
             <div>
                 <hr class="line1">
                 <h1 class="ortxt">OR</h1>
                 <hr class="line2">
-            </div>
+            </div>-->
 
             <mat-form-field class="login-emailfield" appearance="outline">
                 <mat-label>Email Address</mat-label>
@@ -68,10 +68,4 @@
                 <label class="accounttxt">Don't have an account?</label>
                 <label class="signuptxt" routerLink="/signup">Sign up.</label>
             </div>
-            <div>
-                <label class="admintxt" routerLink="/admin-login">Login as Admin.</label>
-            </div>
         </form>
-
-    </mat-card>
-</body>
