--- a/src/app/paymentform/paymentform.component.css
+++ b/src/app/paymentform/paymentform.component.css
@@ -121,14 +121,14 @@ th {
 }
 
 .payBtn {
-    width: 40%;
-    height: 13%;
+    width: 250px;
+    height: 50px;
     float: left;
     margin-left: 25px;
-    background-color: #003049;
+    background-color: #b65e79;
     color: #FFFFFF;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     margin-top: 60px;
 }
 
@@ -160,7 +160,7 @@ th {
 .confirmedvector {
     width: 35%;
     float: left;
-    margin-top: -75px !important;
+    margin-top: -78px !important;
 }
 
 .pendingtxt {
