--- a/src/app/refrigeratordetails/refrigeratordetails.component.html
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.html
@@ -221,7 +221,7 @@
                                 <div class="timeslots">
                                     <h1 class="timeslot">Select a time slot</h1>
                                     <div *ngIf="activeTechnicians.length == 0; else showAvailalbe">
-                                        <button mat-stroked-button class="tech1Btn" disabled>Fully Booked</button>
+                                        <button mat-stroked-button class="tech1Btn" formControlName="service_timeslot" disabled>Fully Booked</button>
                                     </div>
                                     <ng-template #showAvailalbe>
                                         <button mat-stroked-button class="tech1Btn">
@@ -231,7 +231,7 @@
                                     </ng-template>
 
                                     <div *ngIf="activeTechnicians.length == 0; else showAvailalbe1">
-                                        <button mat-stroked-button class="tech2Btn" disabled>Fully Booked</button>
+                                        <button mat-stroked-button class="tech2Btn" formControlName="service_timeslot" disabled>Fully Booked</button>
                                     </div>
                                     <ng-template #showAvailalbe1>
                                         <button mat-stroked-button class="tech2Btn" value="10:00am-1:00pm">
@@ -241,7 +241,7 @@
                                     </ng-template>
 
                                     <div *ngIf="activeTechnicians.length == 0; else showAvailalbe2">
-                                        <button mat-stroked-button class="tech2Btn" disabled>Fully Booked</button>
+                                        <button mat-stroked-button class="tech2Btn" formControlName="service_timeslot" disabled>Fully Booked</button>
                                     </div>
                                     <ng-template #showAvailalbe2>
                                         <button mat-stroked-button class="tech2Btn" value="1:00pm-3:00pm">
@@ -251,7 +251,7 @@
                                     </ng-template>
 
                                     <div *ngIf="activeTechnicians.length == 0; else showAvailalbe3">
-                                        <button mat-stroked-button class="tech2Btn" disabled>Fully Booked</button>
+                                        <button mat-stroked-button class="tech2Btn" formControlName="service_timeslot" disabled>Fully Booked</button>
                                     </div>
                                     <ng-template #showAvailalbe3>
                                         <button mat-stroked-button class="tech2Btn" value="3:00pm-6:00pm">
