--- a/src/app/reschedule/reschedule.component.css
+++ b/src/app/reschedule/reschedule.component.css
@@ -123,6 +123,13 @@
         font-size: 18px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+    .mat-stroked-button {
+        width: 150px;
+        height: 60px;
+        border-style: solid;
+        border-width: thin;
+        border-color: #a4133c !important;
+    }
     .tech1Btn {
         margin-top: -100px;
         margin-right: 10px;
@@ -137,6 +144,12 @@
     }
     .tech4Btn {
         margin-top: 10px;
+    }
+    .noavailtxt {
+        font-size: 22px;
+        margin: auto;
+        margin-top: 40px;
+        margin-left: 135px;
     }
     .h1technicians {
         font-size: 12px;
@@ -265,16 +278,6 @@
     }
     .time {
         color: black;
-    }
-    .tech1Btn {
-        width: 180px;
-        height: 40px;
-        margin: 10px;
-        /* margin-top: -110px; */
-        border-style: solid;
-        border-width: thin;
-        border-color: #FCA311 !important;
-        color: black !important;
     }
     .h1technicians {
         font-size: 12px;
