--- a/src/app/reschedule/reschedule.component.html
+++ b/src/app/reschedule/reschedule.component.html
@@ -45,44 +45,27 @@
                 <div class="timeslots">
                     <h1 class="timeslot">Select a time slot</h1>
                     <div *ngIf="activeTechnicians.length == 0; else showAvailalbe">
-                        <button mat-stroked-button class="tech1Btn" disabled>Fully Booked</button>
+                        <p class="noavailtxt"> There is no available technician </p>
                     </div>
                     <ng-template #showAvailalbe>
                         <button mat-stroked-button class="tech1Btn">
                             <input type="radio" value="7:00am - 10:00am" formControlName="service_timeslot" required>7:00am-10:00am
                             <h1 class="h1technicians"> {{activeTechnicians.length}} slot(s) available </h1>
                         </button>
-                    </ng-template>
-                    <div *ngIf="activeTechnicians.length == 0; else showAvailalbe1">
-                        <button mat-stroked-button class="tech2Btn" disabled>Fully Booked</button>
-                    </div>
-                    <ng-template #showAvailalbe1>
                         <button mat-stroked-button class="tech2Btn" value="10:00am-1:00pm">
                             <input type="radio" value="10:00am - 1:00pm" formControlName="service_timeslot" required>10:00am-1:00pm
                             <h1 class="h1technicians">{{activeTechnicians.length}} slot(s) available </h1>
                         </button>
-                    </ng-template>
-
-                    <div *ngIf="activeTechnicians.length == 0; else showAvailalbe2">
-                        <button mat-stroked-button class="tech3Btn" disabled>Fully Booked</button>
-                    </div>
-                    <ng-template #showAvailalbe2>
                         <button mat-stroked-button class="tech3Btn" value="1:00pm-3:00pm">
                             <input type="radio" value="1:00pm - 3:00pm" formControlName="service_timeslot" required>1:00pm-3:00pm
                             <h1 class="h1technicians">{{activeTechnicians.length}} slot(s) available</h1>
                         </button>
-                    </ng-template>
-                    <div *ngIf="activeTechnicians.length == 0; else showAvailalbe3">
-                        <button mat-stroked-button class="tech3Btn" disabled>Fully Booked</button>
-                    </div>
-                    <ng-template #showAvailalbe3>
                         <button mat-stroked-button class="tech3Btn" value="3:00pm-6:00pm">
                             <input type="radio" value="3:00pm - 6:00pm" formControlName="service_timeslot" required>3:00pm-6:00pm
                             <h1 class="h1technicians">{{activeTechnicians.length}} slot(s) available</h1>
                         </button>
                     </ng-template>
                 </div>
-
             </form>
         </mat-card>
 
