--- a/src/app/requestdetails-admin/requestdetails-admin.component.html
+++ b/src/app/requestdetails-admin/requestdetails-admin.component.html
@@ -13,8 +13,15 @@
 
 
         <div>
-            <button mat-raised-button class="acceptBtn" (click)="approvedRequest()">Accept</button>
-            <button mat-stroked-button class="rejectBtn" (click)="open(cancelReason)">Reject</button>
+            <div *ngIf="request.technician_id == null; else showButton"></div>
+            <ng-template #showButton>
+                <button mat-raised-button class="acceptBtn" (click)="approvedRequest()">Accept</button>
+            </ng-template>
+            <div *ngIf="request.technician_id == null; else notShowButton">
+                <button mat-stroked-button class="rejectBtn" (click)="open(cancelReason)">Reject</button>
+            </div>
+            <ng-template #notShowButton> </ng-template>
+
         </div>
 
         <mat-card class="summary">
@@ -46,7 +53,7 @@
                         <th>Address Details</th>
                         <th>City</th>
                         <th>Property Type</th>
-                        <th>Zip Code</th>
+                        <th>Barangay</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -54,7 +61,7 @@
                         <td>{{request.service_addressDetails}}</td>
                         <td>{{request.service_city}}</td>
                         <td>{{request.service_property_type}}</td>
-                        <td>{{request.service_zipcode}}</td>
+                        <td>{{request.service_barangay}}</td>
                     </tr>
                 </tbody>
             </table>
